# Physical-AI--humanoid-robotics-book

./: .env.example  .gitignore  404.html  API_CLIENT_EXAMPLES.md  ARCHITECTURE.md  COMPLETE_DEPLOYMENT_PACKAGE.md  DEPLOYMENT_COMMUNICATION_TEMPLATES.md  DEPLOYMENT_DAY_RUNBOOK.md  DEPLOYMENT_MASTER_INDEX.md  DEPLOYMENT_READY.md  DEPLOYMENT_SIMULATION.md  DEPLOY_NOW.md  DEPLOY_VERIFICATION.bat  DEPLOY_VERIFICATION.sh  ENV-SETUP-QUICK-REFERENCE.md  GITHUB_PAGES_SETUP.md  HUGGING_FACE_SPACES_DEPLOYMENT.md  MONITORING_SETUP.md  NEXT-STEPS.md  OPERATIONS_MANUAL.md  PHASE-0-SETUP-GUIDE.md  PHASE-8-CREDENTIALS-SETUP.md  POST_DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READINESS.md  PROJECT_COMPLETE.md  PR_TEMPLATE.md  README.md  README_PRODUCTION_LAUNCH.md  RENDER_DEPLOYMENT.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_DEPLOY_NOW.md  RENDER_ENV_VARS_QUICK_REFERENCE.txt  TEAM_ROLES_AND_RESPONSIBILITIES.md  deploy-to-render.sh  docker-compose.yml  index.html  package-lock.json  render.yaml  requirements.txt  (+1 more)
.claude/: .clauderc.json  PHASE-0-BACKEND-ENGINEER-BRIEF.md  PHASE-0-FRONTEND-ENGINEER-BRIEF.md  README.md  settings.local.json
backend/: README.md  __init__.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  health.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  chat.py  content.py  user.py
backend/app/schemas/: __init__.py  auth.py  chat.py  content.py
docusaurus-site/: docusaurus.config.ts
docusaurus_textbook/: .env.example  (+3 more)
(+231 files in other folders)
