[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physical-ai-textbook-backend"
version = "0.1.0"
description = "FastAPI backend for Physical AI & Humanoid Robotics interactive textbook"
requires-python = ">=3.10"
authors = [
    {name = "Panaversity Team", email = "team@panaversity.ai"},
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/panaversity/physical-ai-humanoid-robotics-book"
Repository = "https://github.com/panaversity/physical-ai-humanoid-robotics-book"
Documentation = "https://physical-ai-humanoid-robotics-book.pages.dev"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
